# pytextgrid

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: benchmark.py  impls.py  make_textgrid.py  plot.Rmd
benchmarks/results/: bench_result.csv
docs/: api.md  benchmarks.md  index.md
pytextgrid/: __init__.py
src/: lib.rs
